windows/wrapper/override/c/c_org_webRtc_MediaElementMaker.h

ORG_WEBRTC_WRAPPER_C_PLUS_PLUS_BEGIN_GUARD


/* org_webRtc_MediaElementMaker*/

ORG_WEBRTC_WRAPPER_C_EXPORT_API org_webRtc_MediaElement_t ORG_WEBRTC_WRAPPER_C_CALLING_CONVENTION org_webRtc_MediaElementMaker_bind(uintptr_t element);
ORG_WEBRTC_WRAPPER_C_EXPORT_API uintptr_t ORG_WEBRTC_WRAPPER_C_CALLING_CONVENTION org_webRtc_MediaElementMaker_extract(org_webRtc_MediaElement_t element);