windows/wrapper/override/dotnet/net_override_apis.cs


using System.Runtime.InteropServices;

using bool_t = System.Boolean;
using uint64_t = System.UInt64;
using binary_t = System.IntPtr;
using string_t = System.IntPtr;
using raw_pointer_t = System.IntPtr;
using binary_size_t = System.UInt64;
using generic_handle_t = System.IntPtr;
using instance_id_t = System.IntPtr;
using callback_event_t = System.IntPtr;
using event_observer_t = System.IntPtr;
using const_char_star_t = System.IntPtr;
using exception_handle_t = System.IntPtr;
using box_bool_t = System.IntPtr;
using box_uchar_t = System.IntPtr;
using box_schar_t = System.IntPtr;
using box_ushort_t = System.IntPtr;
using box_sshort_t = System.IntPtr;
using box_uint_t = System.IntPtr;
using box_sint_t = System.IntPtr;
using box_ulong_t = System.IntPtr;
using box_slong_t = System.IntPtr;
using box_ullong_t = System.IntPtr;
using box_sllong_t = System.IntPtr;
using box_uint8_t = System.IntPtr;
using box_int8_t = System.IntPtr;
using box_uint16_t = System.IntPtr;
using box_int16_t = System.IntPtr;
using box_uint32_t = System.IntPtr;
using box_int32_t = System.IntPtr;
using box_uint64_t = System.IntPtr;
using box_int64_t = System.IntPtr;
using box_float_t = System.IntPtr;
using box_double_t = System.IntPtr;
using box_ldouble_t = System.IntPtr;
using box_binary_t = System.IntPtr;
using box_string_t = System.IntPtr;
using ConstBytePtr = System.IntPtr;
using zs_Time_t = System.IntPtr;
using zs_Days_t = System.IntPtr;
using zs_Hours_t = System.IntPtr;
using zs_Seconds_t = System.IntPtr;
using zs_Minutes_t = System.IntPtr;
using zs_Milliseconds_t = System.IntPtr;
using zs_Microseconds_t = System.IntPtr;
using zs_Nanoseconds_t = System.IntPtr;
using iterator_handle_t = System.IntPtr;
using std_list_uint16_t_t = System.IntPtr;
using uint16_t = System.UInt16;

using org_webRtc_AudioData_t = System.IntPtr;
using org_webRtc_EventQueue_t = System.IntPtr;
using org_webRtc_MediaElement_t = System.IntPtr;
using org_webRtc_MediaSample_t = System.IntPtr;
using org_webRtc_MediaSource_t = System.IntPtr;
using org_webRtc_VideoData_t = System.IntPtr;
using org_webRtc_VideoDeviceInfo_t = System.IntPtr;


namespace Wrapper
{
    namespace Org_WebRtc
    {

        internal static class OverrideApi
        {
            private const string UseDynamicLib = Wrapper.Org_WebRtc.Api.UseDynamicLib;

            private const CallingConvention UseCallingConvention = Wrapper.Org_WebRtc.Api.UseCallingConvention;

            private const UnmanagedType UseBoolMashal = Wrapper.Org_WebRtc.Api.UseBoolMashal;
            private const UnmanagedType UseStringMarshal = Wrapper.Org_WebRtc.Api.UseStringMarshal;


#region Struct API helpers

            //------------------------------------------------------------------
            //------------------------------------------------------------------
            // Struct API helpers
            //------------------------------------------------------------------
            //------------------------------------------------------------------

            #region Org.WebRtc.AudioData

            //------------------------------------------------------------------
            //------------------------------------------------------------------
            // Org.WebRtc.AudioData
            //------------------------------------------------------------------
            //------------------------------------------------------------------


            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static org_webRtc_AudioData_t org_webRtc_AudioData_wrapperClone(org_webRtc_AudioData_t handle);

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static void org_webRtc_AudioData_wrapperDestroy(org_webRtc_AudioData_t handle);

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static void org_webRtc_AudioData_wrapperDispose(org_webRtc_AudioData_t handle);

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static instance_id_t org_webRtc_AudioData_wrapperInstanceId(org_webRtc_AudioData_t handle);

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static org_webRtc_AudioData_t org_webRtc_AudioData_wrapperCreate_AudioData();

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static org_webRtc_AudioData_t org_webRtc_AudioData_wrapperCreate_AudioDataWithSize(binary_size_t size);

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            [return: MarshalAs(UseBoolMashal)]
            public extern static bool_t org_webRtc_AudioData_get_readOnly(org_webRtc_AudioData_t thisHandle);

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static binary_size_t org_webRtc_AudioData_size(org_webRtc_AudioData_t thisHandle);

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static void org_webRtc_AudioData_get_data(
                org_webRtc_AudioData_t thisHandle,
                [Out] System.Int16[] buffer,
                binary_size_t size);

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static void org_webRtc_AudioData_set_data(
                org_webRtc_AudioData_t thisHandle,
                System.Int16[] buffer,
                binary_size_t size);

            #endregion // Org.WebRtc.AudioData


            #region Org.WebRtc.EventQueueMaker

            //------------------------------------------------------------------
            //------------------------------------------------------------------
            // Org.WebRtc.EventQueueMaker
            //------------------------------------------------------------------
            //------------------------------------------------------------------

            #endregion // Org.WebRtc.EventQueueMaker


            #region Org.WebRtc.MediaElementMaker

            //------------------------------------------------------------------
            //------------------------------------------------------------------
            // Org.WebRtc.MediaElementMaker
            //------------------------------------------------------------------
            //------------------------------------------------------------------


            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static org_webRtc_MediaElement_t org_webRtc_MediaElementMaker_bind(System.IntPtr hwnd);

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static System.IntPtr org_webRtc_MediaElementMaker_extract(org_webRtc_MediaElement_t element);


            #endregion // Org.WebRtc.MediaElementMaker


            #region Org.WebRtc.MediaSample

            //------------------------------------------------------------------
            //------------------------------------------------------------------
            // Org.WebRtc.MediaSample
            //------------------------------------------------------------------
            //------------------------------------------------------------------


            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static org_webRtc_MediaSample_t org_webRtc_MediaSample_wrapperClone(org_webRtc_MediaSample_t handle);

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static void org_webRtc_MediaSample_wrapperDestroy(org_webRtc_MediaSample_t handle);

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static instance_id_t org_webRtc_MediaSample_wrapperInstanceId(org_webRtc_MediaSample_t handle);

/*
            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static std_list_float_t_t org_webRtc_MediaSample_getCameraViewTransform(org_webRtc_MediaSample_t thisHandle);

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static std_list_float_t_t org_webRtc_MediaSample_getCameraProjectionTransform(org_webRtc_MediaSample_t thisHandle);
            */

#endregion // Org.WebRtc.MediaSample


            #region Org.WebRtc.MediaSource

            //------------------------------------------------------------------
            //------------------------------------------------------------------
            // Org.WebRtc.MediaSource
            //------------------------------------------------------------------
            //------------------------------------------------------------------


            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static org_webRtc_MediaSource_t org_webRtc_MediaSource_wrapperClone(org_webRtc_MediaSource_t handle);

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static void org_webRtc_MediaSource_wrapperDestroy(org_webRtc_MediaSource_t handle);

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static instance_id_t org_webRtc_MediaSource_wrapperInstanceId(org_webRtc_MediaSource_t handle);

            #endregion // Org.WebRtc.MediaSource


            #region Org.WebRtc.VideoData

            //------------------------------------------------------------------
            //------------------------------------------------------------------
            // Org.WebRtc.VideoData
            //------------------------------------------------------------------
            //------------------------------------------------------------------


            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static org_webRtc_VideoData_t org_webRtc_VideoData_wrapperClone(org_webRtc_VideoData_t handle);

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static void org_webRtc_VideoData_wrapperDestroy(org_webRtc_VideoData_t handle);

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static void org_webRtc_VideoData_wrapperDispose(org_webRtc_VideoData_t handle);

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static org_webRtc_VideoData_t org_webRtc_VideoData_wrapperCreate_VideoData(uint64_t size);

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static instance_id_t org_webRtc_VideoData_wrapperInstanceId(org_webRtc_VideoData_t handle);

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            [return: MarshalAs(UseBoolMashal)]
            public extern static bool_t org_webRtc_VideoData_get_is8BitColorSpace(org_webRtc_VideoData_t thisHandle);

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            [return: MarshalAs(UseBoolMashal)]
            public extern static bool_t org_webRtc_VideoData_get_is16BitColorSpace(org_webRtc_VideoData_t thisHandle);

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static binary_size_t org_webRtc_VideoData_get_size(org_webRtc_VideoData_t thisHandle);

            [DllImport(UseDynamicLib, CallingConvention = UseCallingConvention)]
            public extern static void org_webRtc_VideoData_get_data8bit(
                org_webRtc_VideoData_t thisHandle,
                [Out] byte[] buffer,
                binary_size_t size);
